# todo-list-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  todo_app.db
app/: crud.py  main.py  models.py
app/api/: deps.py
app/api/routes/: items.py  login.py  users.py
app/core/: db.py  security.py
